--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Project Module</title>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.8.0/lib/p5.js"></script>
     <script src="note.js"></script>
+    <script src="buttons.js"></script>
     <script src="script.js"></script>
     
 </head>
